# txc2gtfs

./: .gitignore  README.md  pyproject.toml
txc2gtfs/: agency.py  bank_holidays.py  calendar.py  calendar_dates.py  cli.py  converter.py  gtfs.py  routes.py  stop_times.py  stops.py  transxchange.py  trips.py
txc2gtfs/util/: network.py  table.py
