[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "txc2gtfs"
version = "0.4.1"
description = "A Python tool to convert TransXChange data into GTFS."
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "filelock>=3.17.0",
    "lxml>=6.0.0",
    "pandas>=2.2.0",
]
license.file = "LICENSE"
authors = [{ name = "Henrikki Tenkanen", email = "h.tenkanen@ucl.ac.uk" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
readme = "README.md"

[project.scripts]
txc2gtfs = "txc2gtfs.cli:main"

[tool.setuptools]
packages = ["txc2gtfs"]

[dependency-groups]
dev = ["pytest>=8.3.4", "requests>=2.32.3", "ruff>=0.9.6"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "N", "I", "UP", "FURB", "PERF", "RUF"]
